# virtual_ground_truth

./: CMakeLists.txt  README.md  package.xml  readme.md
artifacts/: cave_circuit_01.csv  cave_circuit_02.csv  cave_circuit_03.csv  cave_circuit_04.csv  cave_circuit_05.csv  cave_circuit_06.csv  cave_circuit_07.csv  cave_circuit_08.csv  cave_circuit_practice_01.csv  cave_circuit_practice_02.csv  cave_circuit_practice_03.csv  cave_qual.csv  final_event_01.csv  final_event_02.csv  final_event_03.csv  final_event_04.csv  final_event_05.csv  final_event_06.csv  final_event_07.csv  final_event_08.csv  final_prelim_01.csv  final_prelim_02.csv  final_prelim_03.csv  finals_practice_01.csv  finals_practice_02.csv  finals_practice_03.csv  finals_qual.csv  niosh_ex_config_a.csv  niosh_ex_config_b.csv  niosh_sr_config_a.csv  niosh_sr_config_b.csv  simple_cave_01.csv  simple_cave_02.csv  simple_cave_03.csv  simple_tunnel_02.csv  simple_tunnel_03.csv  simple_urban_01.csv  simple_urban_02.csv  simple_urban_03.csv  tunnel_circuit_01.csv  (+24 more)
launch/: view.launch  view_virtual.rviz
